vlib/v/checker/tests/optional_index_err.vv
fn main() {
    v := 'hello'
    println(v[v.last_index('l')])
}
